# basic_chatbot

./: app.py  pyproject.toml  requirements.txt
src/langgraph/: main.py
src/langgraph/LLM/: groq_llm.py
src/langgraph/graph/: graph_builder.py
src/langgraph/nodes/: chatbot.py  chatbot_tool.py
src/langgraph/state/: state.py
src/langgraph/tools/: search_tool.py
src/langgraph/ui/: uiconfig.ini  uiconfigfile.py
src/langgraph/ui/streamlit/: loadui.py  resultDisplay.py
